# finetune-SAM

./: .gitignore  SingleGPU_train_finetune_box.py  SingleGPU_train_finetune_instance.py  SingleGPU_train_finetune_noprompt.py  Thumbs.db  cfg.py  crops2tiles_singlegpu_AlexPlasmaCells.sh  exec_traintest_singlegpu_AlexPlasmaCells.sh  exec_traintest_singlegpu_AlexPlasmaCells_V2.sh  exec_traintest_singlegpu_AlexPlasmaCells_box.sh  exec_traintest_singlegpu_EmaIBD_array.sh  exec_traintest_singlegpu_EmaIBD_array_difficult4.sh  exec_traintest_singlegpu_EmaIBD_array_easy4.sh  exec_traintest_singlegpu_UKBAbd.sh  exec_traintest_singlegpu_UKBAbd_array.sh  exec_traintest_singlegpu_UKBAbd_array_204_all.sh  exec_traintest_singlegpu_UKBAbd_array_204_aorta.sh  exec_traintest_singlegpu_UKBAbd_array_204_liver.sh  exec_traintest_singlegpu_UKBAbd_array_204_spleen.sh  exec_traintest_singlegpu_UKBAbd_array_254_all.sh  exec_traintest_singlegpu_UKBAbd_array_254_aorta.sh  exec_traintest_singlegpu_UKBAbd_array_254_liver.sh  exec_traintest_singlegpu_UKBAbd_array_254_spleen.sh  exec_traintest_singlegpu_UKBAbd_array_259_all.sh  exec_traintest_singlegpu_UKBAbd_array_259_aorta.sh  exec_traintest_singlegpu_UKBAbd_array_259_kidney.sh  exec_traintest_singlegpu_UKBAbd_array_259_noliver.sh  exec_traintest_singlegpu_UKBAbd_array_259_pancreas.sh  exec_traintest_singlegpu_UKBAbd_array_259_spleen.sh  exec_traintest_singlegpu_UKBAbd_array_260_all.sh  exec_traintest_singlegpu_UKBAbd_array_260_aorta.sh  exec_traintest_singlegpu_UKBAbd_array_260_kidney.sh  exec_traintest_singlegpu_UKBAbd_array_260_noliver.sh  exec_traintest_singlegpu_UKBAbd_array_260_pancreas.sh  exec_traintest_singlegpu_UKBAbd_array_260_spleen.sh  exec_traintest_singlegpu_UKBAbd_array_all.sh  exec_traintest_singlegpu_UKBAbd_array_livpan.sh  exec_traintest_singlegpu_UKBAbd_array_pancreas.sh  exec_traintest_singlegpu_smile.sh  extract_from_SLURM_logs.ipynb  (+20 more)
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
pretrained_weights/MRIFoundation/: source.txt
pretrained_weights/MedSAM/: source.txt
utils/: dataset.py  datasetH5.py  losses.py  process_img.py
(+5 files in other folders)
